2000-08-01  Norbert Schnell  <schnell@ligeti.ircam.fr>

	* packages/explode/c/src/explode.c: added MIDI file export to explode object
	* packages/sequence/c/src/seqmidi.c: added MIDI file import/export to sequence object

2000-07-12  Norbert Schnell  <schnell@ligeti.ircam.fr>

	* packages/midisgi/c/src/sgimidiport.c: fts_midiport_t implementation for SGI
	* packages/midi/*: added package midi (ISPW like midi objects based on fts_midiport_t)

2000-06-23  Francois Dechelle  <dechelle@lipari.ircam.fr>

	* fixed ambiguous class name FileFilter in java/src/ircam/jmax/dialogs/MaxFileChooser.java,
	because of conflicts with JDK 1.2

	* renamed Package.java to JMaxPackage.java, because of conflict with JDK 1.2 java.lang.Package

Fri Jun  9 15:35:11 2000  Norbert Schnell  <schnell@astor.ircam.fr>

	* fts/src/runtime/midi.h: added fts_midiport abstraction to midiport.*

2000-06-07  Francois Dechelle  <dechelle@lipari.ircam.fr>

	* packages/io/c/src/iomodule.c: fixed missing call to serial_config()
	* packages/unixdtd: new (?) implementation of Direct-To-Disk objects, using
	a separate process (the thread implementation leaded to real-time problems
	on IRIX)
	* packages/unixdtd/src/readsf.c: readsf~ has an extra outlet that bangs when 
	file is finished.

2000-06-06  Norbert Schnell  <schnell@ligeti.ircam.fr>

	* packages/ispw/src/data/table.c: fixed name table bug
	* packages/ispw/src/data/value.c: removed fts_..._named_object feature 
	* packages/ispw/src/sampling/sigtable.c: added messages read and write to system inlet
	* fts_named_object_send: now sending to system inlet

2000-05-26  Francois Dechelle  <dechelle@lipari.ircam.fr>

	* fts/src/runtime/sched/sched.c: fixed in fts_sched_do_select the first argument
	to select() (was n_fd, is now n_fd +1).

Mon May 22 11:57:20 2000  Francois Dechelle  <dechelle@astor.ircam.fr>

	* fts/src/non-portable/sgi/syssched.c: 
	  added code for better use of multi-processor machines: if an isolated processor