@@ -1,3 +1,8 @@
+2000-09-19  Francois Dechelle  <dechelle@lipari.ircam.fr>
+
+	* fts/src/runtime/sched/sched.[ch]: added fts_sched_add and fts_sched_remove
+	to add and remove a free running method to the scheduler loop
+
 2000-08-01  Norbert Schnell  <schnell@ligeti.ircam.fr>
 
 	* packages/explode/c/src/explode.c: added MIDI file export to explode object
